# tauri-plugin-connectivity

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
