[package]
name = "tauri-plugin-connectivity"
version = "0.1.0"
description = "Network connectivity monitoring plugin for Tauri applications"
license = "MIT"
edition = "2024"
rust-version = "1.94.0"
links = "tauri-plugin-connectivity"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.9.3" }
thiserror = "2.0.17"
tracing = { version = "0.1.41", default-features = false, features = ["std", "log", "release_max_level_warn"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Networking_Connectivity"] }

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
