[package]
name = "tauri-app"
version = "0.1.0"
description = "Connectivity example app"
edition = "2024"
rust-version = "1.94.0"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-connectivity = { path = "../../../" }
